--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,7 +28,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mock-server</groupId>
-			<artifactId>mockserver-netty-no-dependencies</artifactId>
+			<artifactId>mockserver-netty</artifactId>
 			<version>5.15.0</version>
 		</dependency>
 
