--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,7 @@
 		<java.version>17</java.version>
 		<spock-core.version>2.4-M1-groovy-4.0</spock-core.version>
 		<gmavenplus-plugin.version>3.0.0</gmavenplus-plugin.version>
+		<nimbus-jose-jwt.version>9.30.2</nimbus-jose-jwt.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -29,6 +30,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mock-server</groupId>
@@ -57,6 +62,17 @@
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-spring</artifactId>
 			<version>${spock-core.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>${nimbus-jose-jwt.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
