--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
 		<gmavenplus-plugin.version>3.0.0</gmavenplus-plugin.version>
 		<nimbus-jose-jwt.version>9.30.2</nimbus-jose-jwt.version>
 		<jmolecules.version>1.8.0</jmolecules.version>
+		<jmolecules-integrations.version>0.16.0</jmolecules-integrations.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,7 +51,16 @@
 			<artifactId>jmolecules-events</artifactId>
 			<version>${jmolecules.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jmolecules</groupId>
+			<artifactId>jmolecules-ddd</artifactId>
+			<version>${jmolecules.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jmolecules.integrations</groupId>
+			<artifactId>jmolecules-jackson</artifactId>
+			<version>${jmolecules-integrations.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
