--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,7 @@
 		<nimbus-jose-jwt.version>9.30.2</nimbus-jose-jwt.version>
 		<jmolecules.version>1.8.0</jmolecules.version>
 		<jmolecules-integrations.version>0.16.0</jmolecules-integrations.version>
+		<lombok.version>1.18.30</lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -74,6 +75,12 @@
 		<dependency>
 			<groupId>org.springframework.modulith</groupId>
 			<artifactId>spring-modulith-starter-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
